# jinf

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  python-app.yml  test.yml
jinf/: __init__.py  inflection_form.py  inflection_type.py  jinf.py
jinf/data/: e_basic_stem_suffix.json  jinf.json
scripts/: llist_inf_types.py  parse_jumandic.py
tests/: test_inflection_form.py  test_inflection_type.py  test_jinf.py
