[tool.poetry]
name = "jinf"
version = "0.1.0"
description = ""
authors = ["Hirokazu Kiyomaru <h.kiyomaru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyknp = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
