[tool.poetry]
name = "jinf"
version = "1.0.1"
description = "A Japanese inflection converter."
license = "MIT"
authors = ["Hirokazu Kiyomaru <h.kiyomaru@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hkiyomaru/jinf"
keywords = [
    "NLP",
    "JUMAN"
]
packages = [
    { include = "jinf" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyknp = {extras = ["pyknp"], version = ">=0.6,<1.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.extras]
pyknp = ["pyknp"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
